--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,3 +1,4 @@
+{% set python_min = "3.10" %}
 {% set name = "neuralgcm" %}
 {% set version = "1.1.0" %}
 
@@ -16,11 +17,11 @@ build:
 
 requirements:
   host:
-    - python >=3.10
+    - python {{ python_min }}
     - setuptools
     - pip
   run:
-    - python >=3.10
+    - python >={{ python_min }}
     - dinosaur-dycore
     - dm-haiku
     - gin-config
@@ -38,6 +39,7 @@ test:
   commands:
     - pip check
   requires:
+    - python {{ python_min }}
     - pip
 
 about:
